src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Integrations/content/Views/Integrations/_ViewStart.cshtml.pp
@{
    Layout = "~/Views/Shared/_Dashboard.cshtml";
}